--- a/templates/evento.html
+++ b/templates/evento.html
@@ -4,16 +4,17 @@
     <h2> Eventos </h2>
     <form action="submit" method="POST">{% csrf_token %}
         <label>Titulo</label>
+        <input type="number" name="id_evento" value = "{{ evento.id }}" hidden>
         <br>
-        <input type="text" name="titulo">
+        <input type="text" name="titulo" value = "{{ evento.titulo }}">
         <br>
         <label>data evento</label>
         <br>
-        <input type="datetime-local" name="data_evento">
+        <input type="datetime-local" name="data_evento" value = "{{ evento.get_data_input_evento }}">
         <br>
         <label>descrição</label>
         <br>
-        <textarea name="descricao" rows="5"></textarea>
+        <textarea name="descricao" rows="5" >{{ evento.descricao }}</textarea>
         <br>
         <br>
         <button type="submit">Salvar</button>
